--- a/About.html
+++ b/About.html
@@ -1,160 +1,66 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html>
 <head>
-  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css'>
-<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css'>
-<meta name="viewport" content="user-scalable=no; width=device-width; height=device-height; initial-scale=1.0;" />
-  <title>دەربارە</title>
- 
- </head>
- 
- <style>
-
-body{
-	background-color: #FAFAFA;
-
-}
-
-ul {
-  position:absolute;
-  top:90%;
-  left:50%;
-  transform: translate(-50%, -50%);
-  margin:0;
-  padding:0;
-  display:flex;
-}
-
-ul li {
-  list-style: none;
-}
-
-ul li a {
-  position: relative;
-  width:55px;
-  height:60px;
-  display:block;
-  text-align:center;
-  margin:0 10px;
-  border-radius: 50%;
-  padding: 6px;
-  box-sizing: border-box;
-  text-decoration:none;
-  box-shadow: 0 10px 15px rgba(0,0,0,0.3);
-  background: linear-gradient(0deg, #ddd, #fff);
-  transition: .5s;
-}
-
-ul li a:hover {
-  box-shadow: 0 2px 5px rgba(0,0,0,0.3);
-  text-decoration:none;
-}
-
-ul li a .fab {
-  widht: 100%;
-  height:100%;
-  display:block;
-  background: linear-gradient(0deg, #fff, #ddd);
-  border-radius: 50%;
-  line-height: calc(60px - 12px);
-  font-size:24px;
-  color: #262626;
-  transition: .5s;
-  text-align: center;
-}
-
-ul li:nth-child(1) a:hover .fab {
-  color: #3b5998;
-}
-
-ul li:nth-child(2) a:hover .fab {
-  color: #00aced;
-}
-
-ul li:nth-child(3) a:hover .fab {
-  color: #dd4b39;
-}
-
-ul li:nth-child(4) a:hover .fab {
-  color: #007bb6;
-}
-
-ul li:nth-child(5) a:hover .fab {
-  color: #e4405f;
-}
- 
-.button {
-  background-color: #4CAF50; /* Green */
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 10px;
-  margin: 4px 2px;
-  cursor: pointer;
-  
-}
-
-.button1 {
-  background-color: white; 
-  color: black; 
-  border: 2px solid #f44336;
-  text-decoration: none;
-}
-p{
-	text-align: center;
-	font-size: 20px;
-}
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
 .card {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  width: 40%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 300px;
+  margin: auto;
+  text-align: center;
+  font-family: arial;
 }
 
-.card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+.title {
+  color: grey;
+  font-size: 18px;
 }
 
- </style>
- 
- <body>
- <br>
-<center>
+button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+}
+
+a {
+  text-decoration: none;
+  font-size: 22px;
+  color: black;
+}
+
+button:hover, a:hover {
+  opacity: 0.7;
+}
+</style>
+</head>
+<body>
+
 
 <div class="card">
-  <img src="https://i.ibb.co/mhpY6bn/origin-gallery-uid-FBE2002-D-D299-4826-8-B3-C-7-EACA22-C04-E5-1605378454339-source-other.jpg" alt="ibrahim" width="200" height="200">
+  <img src="https://i.ibb.co/mhpY6bn/origin-gallery-uid-FBE2002-D-D299-4826-8-B3-C-7-EACA22-C04-E5-1605378454339-source-other.jpg" alt="John" style="width:100%">
+  <h3>ابراھیم قادر مصطفی بالەکی </h3>
+  <p class="title">دروستکەری بەرنامەکە</p>
+  
+  <h6>لەرێگای ئەم تۆرەکۆمەلایەتیانە لەگەلم بن</h6>
+
+    <div style="margin: 24px 0;">
+      <a href="https://twitter.com/ibrahemqadir1"><i class="fa fa-twitter"></i></a> 
+
+     <a href="https://t.me/sulltan_apk"><i class="fa fa-telegram"></i></a> 
+    <a href="https://is.gd/Czd7kK"><i class="fa fa-youtube"></i></a> 
+    <a href="https://is.gd/oOa7HO"><i class="fa fa-snapchat"></i></a>  
+    <a href="https://instagram.com/ittz._ibo"><i class="fa fa-instagram"></i></a>  
+    <a href="https://www.facebook.com/ibrahimmm55"><i class="fa fa-facebook"></i></a> 
+  </div>
+  <p><button></button></p>
 </div>
 
-</center>
-
- <br>
- <br>
- <br>
-<br>
-
- <br>
-<br>
-
-  <center>
-<a href="https://sulltan-store.blogspot.com/?m=1" class="button button1">گەرانەوە بۆ لیستی سەرەکی</a>
- </center>
- <br>
- <br>
- <br>
-<p>لە رێگای ئەم تۆرەکۆمەلایەتیانە لەگەلم بن</p>
-<ul>
-  
-  <li><a href="https://t.me/sulltan9"><i class="fab fa-telegram" aria-hidden="true"></i></a></li>
-  <li><a href="https://is.gd/Czd7kK"><i class="fab fa-youtube" aria-hidden="true"></i></a></li>
-  <li><a href="https://instagram.com/ittz._ibo"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
-  <li><a href="https://is.gd/oOa7HO"><i class="fab fa-snapchat" aria-hidden="true"></i></a></li>
- <li><a href="https://www.facebook.com/ibrahimmm55"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
-</ul>
-
- <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
- </body>
- 
- </html>
+</body>
+</html>
